<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pantau DKI</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">1212</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="network_no_internet">Tidak terkoneksi dengan Internet</string>
    <string name="error_server_not_found">URL tidak ditemukan pada server.\nSilahkan menunggu (404).</string>
    <string name="error_server_problem">Terjadi kesalahan pada server.\nSilahkan menunggu 10 menit (500).</string>
    <string name="error_internet_problem">Server sedang bermasalah.\nSilahkan menunggu.</string>
    <string name="error_internet_no_found">Koneksi internet tidak tersedia.\nPastikan anda tersambung dengan internet.</string>
    <string name="error_unknown_problem">Maaf, sedang terjadi perbaikan server.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="splash_reconnect">Ulang kembali</string>
    <string name="splash_text"><![CDATA[created by <font color="#FF6666"><strong>Polatic.co.id</strong></font>]]></string>
    <string name="action_refresh">Refresh</string>

    <string-array name="sidebar_menu_array">
        <item>Home</item>
        <item>Program Kerja</item>
        <item>Hubungi</item>
        <item>Tentang Kami</item>
    </string-array>

    <string name="menu_urusan">Urusan</string>
    <string name="menu_apdb">APBD</string>
    <string name="home_label_menu_first">Pendapatan Daerah</string>
    <string name="home_label_menu_second">Belanja Daerah</string>
    <string name="home_label_menu_third">Pembiayaan Daerah</string>
    <string name="home_label_menu_first_one">Pendapatan Asli Daerah</string>
    <string name="home_label_menu_first_two">Dana Perimbangan</string>
    <string name="home_label_menu_first_three">Lain-lain Pendapatan Daerah yang Sah</string>
    <string name="home_label_menu_second_one">Belanja Tidak Langsung</string>
    <string name="home_label_menu_second_two">Belanja Langsung</string>
    <string name="home_label_menu_third_one">Penerimaan Pembiayaan</string>
    <string name="home_label_menu_third_two">Pengeluaran Pembiayaan</string>
    <string name="listview_end">Data sudah selesai</string>
    <string name="contact_us">Kami siap melayani anda</string>
    <string name="send">Kirim</string>
    <string name="cancel">Batal</string>
    <string name="phone">Telepon</string>
    <string name="sms">SMS</string>
    <string name="contact_description">Kami, Pemerintah DKI Jakarta, siap melayani masyarakat. Anda dapat menghubungi melalui media yang ada dibawah ini</string>
    <string name="contact_phone">164</string>
    <string name="contact_sms">32881818</string>
    <string name="phone_number">phone_number</string>
    <string name="result">result</string>
    <string name="dialog">dialog</string>
    <string name="tel">tel:</string>
    <string name="compose_email">Kirim Email</string>
    <string name="or">Atau</string>
    <string name="about_dki_vision"><![CDATA[<strong>Visi</strong> : Jakarta Baru, kota modern yang tertata rapi, menjadi tempat hunian yang layak dan manusiawi, memiliki masyarakat yang berkebudayaan, dan dengan pemerintahan yang berorientasi pada pelayanan publik<br/><br/><br/>]]></string>
    <string name="about_dki_mission"><![CDATA[<strong>Misi</strong> :<br/><br/> 1. Mewujudkan Jakarta sebagai kota modern yang tertata rapi serta konsisten dengan rencana Tata  Ruang Wilayah.<br/><br/> 2. Menjadikan Jakarta sebagai kota yang bebas dari masalah-masalah menahun seperti macet, banjir, pemukiman kumuh, sampah dan lain-lain. <br/><br/>3. Menjamin ketersediaan hunian dan ruang publik yang layak serta terjangkau bagi warga kota dan ketersediaan pelayanan kesehatan yang gratis sampai rawat inap dan pendidikan yang berkualitas secara gratis selama 12 tahun untuk warga Jakarta.<br/><br/>4. Membangun budaya masyarakat perkotaan yang toleran, tetapi juga sekaligus memiliki kesadaran dalam memelihara kota.<br/><br/> 5. Membangun pemerintahan yang bersih dan transparan serta berorientasi pada pelayanan publik.]]></string>
    <string name="jokowi">Jokowi</string>
    <string name="ahok">Ahok</string>
</resources>