<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_custoom"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/contact_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/contact_description"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_large" />

        <View style="@style/DetailSeparator" />

        <LinearLayout
            android:id="@+id/contact_layout_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_description"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@+id/btn_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:background="@color/blue_heavy"
                android:drawableLeft="@drawable/ic_action_call"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/phone"
                android:textColor="@color/white_light" />

            <Button
                android:id="@+id/btn_sms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight=".5"
                android:background="@drawable/buy_button"
                android:drawableLeft="@drawable/ic_action_email"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/sms"
                android:textColor="@color/white_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/contact_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buy_button"
            android:text="@string/compose_email"
            android:textColor="@color/white_light"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>