<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minHeight="250dp"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:padding="@dimen/element_padding_small" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/contact_us"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_light" />
    </LinearLayout>

    <EditText
        android:id="@+id/txt_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_dialog"
        android:lines="8"
        android:gravity="top"
        android:padding="@dimen/element_padding_small" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="@dimen/element_padding_small"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_sms_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".5"
            android:background="@drawable/buy_button"
            android:drawableLeft="@drawable/ic_action_send_now"
            android:padding="5dp"
            android:text="@string/send"
            android:textColor="@color/white_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sms_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".5"
            android:background="@drawable/blue_button"
            android:drawableLeft="@drawable/ic_action_cancel"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white_light"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>