<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/element_padding_small"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/home_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/home_message_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/LabelTextHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_label_menu_first" />

            <RelativeLayout
                android:id="@+id/total_item_layout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="5dp" >

                <com.echo.holographlibrary.BarGraph
                    android:id="@+id/first_bargraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:barAxisColor="@color/main_green_light" />
            </RelativeLayout>

            <TextView
                style="@style/LabelTextHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_label_menu_second" />

            <RelativeLayout
                android:id="@+id/total_item_layout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="5dp" >

                <com.echo.holographlibrary.BarGraph
                    android:id="@+id/second_bargraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:barAxisColor="@color/main_green_light" />
            </RelativeLayout>

            <TextView
                style="@style/LabelTextHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_label_menu_third" />

            <RelativeLayout
                android:id="@+id/total_item_layout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="5dp" >

                <com.echo.holographlibrary.BarGraph
                    android:id="@+id/third_bargraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:barAxisColor="@color/main_green_light" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>